--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 
 <p>Inspired by the <a href="https://hackage.haskell.org/package/retry">retry Haskell
 package</a>.</p>
+
+<p>Get started with <a href="https://cb372.github.io/cats-retry/docs/index.html">Getting
+started</a>!</p>
 </div></div></section><section class="technologies"><div class="container"><div class="row"></div></div></section></main><footer id="site-footer"><div class="container"><div class="row"><div class="col-xs-6"><p>cats-retry is designed and developed by <a href="" target="_blank">Chris Birchall</a></p></div><div class="col-xs-6"><p class="text-right"><a href="https://github.com/cb372/cats-retry"><span class="fa fa-github"></span>View on GitHub</a></p></div></div><div class="row"><div class="col-xs-6"><p>Website built with <a href="https://47deg.github.io/sbt-microsites/" target="_blank">Sbt-microsites</a> - © 2016 <a href="https://www.47deg.com/" target="_blank">47 Degrees</a></p></div></div></div></footer><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script><script src="/cats-retry/highlight/highlight.pack.js"></script><script>hljs.configure({
 languages:['scala','java','bash']
 });
