--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ package</a>.</p>
 
 <p>Get started with <a href="https://cb372.github.io/cats-retry/docs/index.html">Getting
 started</a>!</p>
-</div></div></section></main><footer id="site-footer"><div class="container"><div class="row"><p>cats-retry is designed and developed by <a href="https://cb372.github.io/cats-retry/" target="_blank" rel="noopener noreferrer">Chris Birchall</a></p></div><div class="row"><div><p>Website built with <a href="https://47deg.github.io/sbt-microsites/" target="_blank" rel="noopener noreferrer">sbt-microsites</a> - © 2019 <a href="https://www.47deg.com/" target="_blank" rel="noopener noreferrer">47 Degrees</a></p></div></div></div></footer><script src="/cats-retry/highlight/highlight.pack.js"></script><script>
+</div></div></section></main><footer id="site-footer"><div class="container"><div class="row"><p>cats-retry is designed and developed by <a href="https://cb372.github.io/cats-retry/" target="_blank" rel="noopener noreferrer">Chris Birchall</a></p></div><div class="row"><div><p>Website built with <a href="https://47degrees.github.io/sbt-microsites/" target="_blank" rel="noopener noreferrer">sbt-microsites</a> - © 2019 <a href="https://www.47deg.com/" target="_blank" rel="noopener noreferrer">47 Degrees</a></p></div></div></div></footer><script src="/cats-retry/highlight/highlight.pack.js"></script><script>
 // For all code blocks, copy the language from the containing div
 // to the inner code tag (where hljs expects it to be)
 const langPrefix = 'language-';
